--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
 <head>
-    <title>Wello pilot</title>
+    <title>Messenger</title>
 </head>
 <body>
     <div id="app"></div>
